@@ -47,6 +47,7 @@ PQXX_HAVE_PQFTABLECOL	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA	internal	libpq
+PQXX_HAVE_PQUNESCAPEBYTEA_9	internal	libpq
 PQXX_HAVE_PQCLIENTENCODING	internal	libpq
 PQXX_HAVE_PQMBLEN	internal	libpq
 PQXX_HAVE_QUIET_NAN	internal	compiler
